--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "incremental": true,
     "declaration": true,
     "declarationDir": "dist",
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false
   },
   "include": [
     "./src/**/*",
