--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/sinon": "^17.0.3",
     "@web/dev-server-esbuild": "^1.0.2",
     "@web/test-runner": "^0.18.3",
+    "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
     "dprint": "^0.47.2",
     "esbuild": "^0.23.0",
+    "sinon": "^18.0.0",
     "typescript": "^5.5.4"
   }
 }
