Support for different build targets

--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "version": "0.1.0",
   "description": "A user interface library powered by web components tech",
   "main": "dist/s-ray.js",
+  "module": "dist/s-ray-bundler.js",
   "types": "dist/s-ray.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/s-ray.d.ts",
+      "module": "./dist/s-ray-bundler.js",
+      "import": "./dist/s-ray-bundler.js",
+      "require": "./dist/s-ray.js"
+    }
+  },
   "files": [
     "dist/s-ray.js",
+    "dist/s-ray.js.map",
+    "dist/s-ray.min.js",
+    "dist/s-ray.min.js.map",
     "dist/s-ray.d.ts",
     "package.json"
   ],
